添加注释管理功能

--- a/CustomizeFolderTool/CustomizeFolderTool.csproj
+++ b/CustomizeFolderTool/CustomizeFolderTool.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Forms\Color.xaml.cs">
       <DependentUpon>Color.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tipinfo.xaml.cs">
+      <DependentUpon>Tipinfo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Util\Desktop.cs" />
     <Compile Include="Util\Register.cs" />
     <Page Include="dummy.xaml">
@@ -104,6 +107,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\Color.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\Tipinfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
