--- a/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
+++ b/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
@@ -21,4 +21,8 @@
 	  <PackageReference Include="ini-parser-netstandard" Version="2.5.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\ToolResources\ToolResources.csproj" />
+	</ItemGroup>
+
 </Project>
