--- a/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
+++ b/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
@@ -9,6 +9,7 @@
 		<ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
 		<ApplicationHighDpiMode>DpiUnawareGdiScaled</ApplicationHighDpiMode>
 		<ApplicationIcon>Assets\CustomizeFolderTool.ico</ApplicationIcon>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -22,7 +23,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ToolResources\ToolResources.csproj" />
+	  <None Update="Resources\ToolResources.dll">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
