--- a/CustomizeFolderToolPlus/Properties/launchSettings.json
+++ b/CustomizeFolderToolPlus/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CustomizeFolderToolPlus": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\_\\_svn\\01_Management\\02_監視・進捗管理\" -a icon -lang en-US"
+      "commandLineArgs": "\"D:\\test\\New\" -a alias -lang en-US"
     }
   }
 }
