--- a/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
+++ b/CustomizeFolderToolPlus/CustomizeFolderToolPlus.csproj
@@ -8,24 +8,47 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
 		<ApplicationHighDpiMode>DpiUnawareGdiScaled</ApplicationHighDpiMode>
-		<ApplicationIcon>Assets\CustomizeFolderTool.ico</ApplicationIcon>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+		<ApplicationIcon>CustomizeFolderTool.ico</ApplicationIcon>
+		<NoWarn>1701;1702;CA1416;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Content Include="Assets\CustomizeFolderTool.ico">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
+		<Content Include="CustomizeFolderTool.ico">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="ini-parser-netstandard" Version="2.5.2" />
+		<PackageReference Include="ini-parser-netstandard" Version="2.5.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="Resources\ToolResources.dll">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+		<ProjectReference Include="..\ToolLib\ToolLib.csproj" />
+		<ProjectReference Include="..\ToolResources\ToolResources.vcxproj">
+			<OutputItemType>Content</OutputItemType>
+			<ReferenceOutputAssembly>False</ReferenceOutputAssembly>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</ProjectReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<SupportedPlatform Include="Windows" />
 	</ItemGroup>
 
 </Project>
