--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -2,14 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net8.0-windows</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\ToolLib\ToolLib.csproj" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="Icon02.ico">
@@ -18,11 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ToolResources\ToolResources.vcxproj">
-			<OutputItemType>Content</OutputItemType>
-			<ReferenceOutputAssembly>False</ReferenceOutputAssembly>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</ProjectReference>
+		<ProjectReference Include="..\CustomizeFolderToolPlus\CustomizeFolderToolPlus.csproj" />
 	</ItemGroup>
 
 </Project>
