--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -5,16 +5,25 @@
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoWarn>1701;1702;CA1416;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<None Update="Icon02.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Icon09.ico">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\CustomizeFolderToolPlus\CustomizeFolderToolPlus.csproj" />
+		<ProjectReference Include="..\ToolResources\ToolResources.vcxproj">
+			<OutputItemType>Content</OutputItemType>
+			<ReferenceOutputAssembly>False</ReferenceOutputAssembly>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</ProjectReference>
 	</ItemGroup>
 
 </Project>
